--- a/app/src/main/res/layout/wifi_dialog.xml
+++ b/app/src/main/res/layout/wifi_dialog.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:focusable="true"
                 android:gravity="center_horizontal"
-                android:text="Waiting for WiFi"
+                android:text="@string/waiting_for_wifi"
                 android:textSize="15sp"
                 android:fontFamily="@font/sukhumvittadmai_medium"
                 android:textColor="?attr/title_color"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:text="Your download will begin once you are come on WiFi. Or you can change the setting below:"
+                android:text="@string/download_will_begin"
                 android:textSize="13sp"
                 android:fontFamily="@font/sukhumvittadmai_normal"
                 android:textColor="?attr/title_color"
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:focusable="true"
                     android:gravity="center_vertical"
-                    android:text="Download over WiFi"
+                    android:text="@string/download_over_wifi"
                     android:textSize="15sp"
                     android:layout_weight="1"
                     android:fontFamily="@font/sukhumvittadmai_bold"
@@ -89,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:focusable="true"
-                    android:text="*You can chnage this from settings"
+                    android:text="@string/you_can_change"
                     android:textSize="12sp"
                     android:fontFamily="@font/sukhumvittadmai_normal"
                     android:textColor="?attr/title_color"
@@ -113,7 +113,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/description_title_yellow"
-                    android:text="OK"
+                    android:text="@string/ok"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent" />
 
