--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -274,28 +274,57 @@
             android:visibility="gone"/>
 
 
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingTop="@dimen/NontonSize15"
-            android:paddingEnd="10dp"
-            android:paddingBottom="@dimen/NontonSize15"
-            android:visibility="gone">
+            android:layout_marginLeft="@dimen/toolbarBackLeft"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/download"
+                android:layout_width="wrap_content"
+                android:background="@drawable/my_downloads_icon_more_new"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"/>
 
             <TextView
                 android:id="@+id/download_settings"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:text="@string/download_settings"
+                android:fontFamily="@font/sukhumvittadmai_normal"
+                android:textSize="@dimen/font_medium_large"
+                android:layout_marginLeft="@dimen/NontonSize15"
+                android:paddingRight="@dimen/NontonSize10"
                 android:textColor="?attr/change_language_text"
-                android:textSize="@dimen/font_medium_large" />
-        </LinearLayout>
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@+id/download"/>
+
+
+
+
+
+
+
+
+            <Switch
+                android:visibility="invisible"
+                android:layout_width="wrap_content"
+                android:layout_height="64dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:theme="@style/SwitchTheme"
+                />
+
+
+
+        </RelativeLayout>
+
+
+
 
         <View
             android:layout_width="match_parent"
