--- a/app/src/main/res/values-hi/arrays.xml
+++ b/app/src/main/res/values-hi/arrays.xml
@@ -67,4 +67,12 @@
 
     </string-array>
 
+    <string-array name="download_quality">
+        <item>High</item>
+        <item>Medium</item>
+        <item>Low</item>
+        <item>Data Saver</item>
+        <item>Always ask</item>
+    </string-array>
+
 </resources>
