--- a/app/src/main/res/layout/activity_my_downloads.xml
+++ b/app/src/main/res/layout/activity_my_downloads.xml
@@ -11,14 +11,13 @@
             android:id="@+id/nodatafounmd"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/empty_background"
-            android:visibility="gone"
+            android:visibility="visible"
             android:gravity="center">
                 <ImageView
                     android:id="@+id/no_data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/empty_logo_dark"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:background="@drawable/ic_no_data"
                     android:contentDescription="TODO"
                     android:layout_centerInParent="true"/>
             <TextView
@@ -27,7 +26,11 @@
                 android:layout_below="@id/no_data"
                 android:text="@string/no_downloads"
                 android:textColor="?attr/no_download_video_background_color"
-                android:textSize="24sp"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:layout_marginLeft="@dimen/_4sdp"
+                android:layout_marginRight="@dimen/_4sdp"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:layout_centerInParent="true"/>
 
         </RelativeLayout>
