--- a/app/src/main/res/layout/season_fragment_layout.xml
+++ b/app/src/main/res/layout/season_fragment_layout.xml
@@ -74,7 +74,7 @@
                 android:paddingTop="@dimen/_26sdp"
                 android:paddingBottom="@dimen/_70sdp"
                 android:text="@string/coming_soon"
-                android:textColor="@color/moretitlecolor"
+                android:textColor="@color/description_title_yellow"
                 android:textSize="@dimen/coming_soon_text_size"
                 android:visibility="gone" />
 
