--- a/app/src/main/res/layout/cast_expanded_controller_activity.xml
+++ b/app/src/main/res/layout/cast_expanded_controller_activity.xml
@@ -10,6 +10,7 @@
         android:id="@+id/background_place_holder_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:contentDescription="@string/cast_expanded_controller_background_image"
         android:scaleType="fitXY"
         />
@@ -19,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
+        android:visibility="gone"
         android:contentDescription="@string/cast_expanded_controller_background_image"
         />
 
@@ -27,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
+        android:visibility="gone"
         android:contentDescription="@string/cast_expanded_controller_background_image"
         android:background="@drawable/placeholder_landscape" />
     <RelativeLayout
