--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -373,7 +373,7 @@
                         app:tabMode="fixed"
                         app:tabSelectedTextColor="@color/white"
                         app:tabTextColor="?attr/cancel_text_color"
-                        />
+                        app:tabTextAppearance="@style/CusromTabText"/>
                     <ImageView
                         android:background="@color/description_grey"
                         android:layout_width="match_parent"
