--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -345,6 +345,12 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
+    <style name="CusromTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:fontFamily">@font/sukhumvittadmai_normal</item>
+    </style>
+
     <style name="Theme.CastVideosDark" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimaryDark">@color/black</item>
         <item name="castMiniControllerStyle">@style/CustomCastMiniController</item>
