--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -59,9 +59,9 @@
     </string-array>
 
     <string-array name="download_quality">
-        <item>High</item>
-        <item>Medium</item>
-        <item>Low</item>
+        <item>Full HD</item>
+        <item>HD</item>
+        <item>SD</item>
         <item>Data Saver</item>
         <item>Always ask</item>
     </string-array>
