--- a/app/src/main/res/drawable/back_icon_player.xml
+++ b/app/src/main/res/drawable/back_icon_player.xml
@@ -1,13 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="@color/white"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<item>
+    <vector
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24"
+        android:viewportHeight="24">
+        <group android:translateY="1">
+            <path
+                android:fillColor="#730000"
+                android:pathData="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z" />
+        </group>
+    </vector>
+</item>
 
-    <path android:pathData="M0 0h24v24H0V0z" />
-    <path
-        android:fillColor="#000000"
-        android:pathData="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z" />
-</vector>
+<item>
+    <vector
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24"
+        android:viewportHeight="24">
+        <path
+            android:fillColor="#FFF"
+            android:pathData="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z" />
+    </vector>
+</item>
+</layer-list>
