--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -93,7 +93,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_margin="@dimen/NontonSize8"
                                 android:contentDescription="Series Backpress "
-                                android:tint="#FFFFFF"
                                 app:srcCompat="@drawable/back_icon_player" />
                         </FrameLayout>
 
@@ -176,7 +175,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="fill_vertical"
-                android:fillViewport="true">
+                android:fillViewport="true"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
