--- a/app/src/main/res/layout/detail_screen.xml
+++ b/app/src/main/res/layout/detail_screen.xml
@@ -97,12 +97,13 @@
                     android:visibility="gone"
                     android:padding="@dimen/NontonSize20"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    >
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="?attr/toolbar_back_arrow"
+                        android:background="@drawable/background_shadow"
                         android:contentDescription="TODO" />
 
 
