onBoarding screen changes

--- a/app/src/main/res/layout/fragment_step_three.xml
+++ b/app/src/main/res/layout/fragment_step_three.xml
@@ -51,33 +51,33 @@
 
 <!--        </LinearLayout>-->
 
-        <TextView
-            android:id="@+id/skip_login"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/NontonSize45"
-            android:fontFamily="@font/sukhumvittadmai_medium"
-            android:text="เริ่มใช้งาน"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:textSize="@dimen/NontonSize20"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginRight="@dimen/_20sdp"
-            android:layout_marginBottom="@dimen/NontonSize20"
-            android:background="@drawable/rounded_button_welcome"/>
-        <TextView
-            android:id="@+id/register"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/NontonSize45"
-            android:fontFamily="@font/sukhumvittadmai_medium"
-            android:text="สมัครสมาชิก"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:textSize="@dimen/NontonSize20"
-            android:layout_above="@+id/skip_login"
-            android:layout_marginBottom="@dimen/NontonSize20"
-            android:layout_marginLeft="@dimen/_20sdp"
-            android:layout_marginRight="@dimen/_20sdp"
-            android:background="@drawable/rounded_button_gray"/>
+<!--        <TextView-->
+<!--            android:id="@+id/skip_login"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/NontonSize45"-->
+<!--            android:fontFamily="@font/sukhumvittadmai_medium"-->
+<!--            android:text="เริ่มใช้งาน"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:gravity="center"-->
+<!--            android:textSize="@dimen/NontonSize20"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_marginLeft="@dimen/_20sdp"-->
+<!--            android:layout_marginRight="@dimen/_20sdp"-->
+<!--            android:layout_marginBottom="@dimen/NontonSize20"-->
+<!--            android:background="@drawable/rounded_button_welcome"/>-->
+<!--        <TextView-->
+<!--            android:id="@+id/register"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/NontonSize45"-->
+<!--            android:fontFamily="@font/sukhumvittadmai_medium"-->
+<!--            android:text="สมัครสมาชิก"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:gravity="center"-->
+<!--            android:textSize="@dimen/NontonSize20"-->
+<!--            android:layout_above="@+id/skip_login"-->
+<!--            android:layout_marginBottom="@dimen/NontonSize20"-->
+<!--            android:layout_marginLeft="@dimen/_20sdp"-->
+<!--            android:layout_marginRight="@dimen/_20sdp"-->
+<!--            android:background="@drawable/rounded_button_gray"/>-->
     </RelativeLayout>
 </layout>
