setting aspect ratio for onBoarding screen

--- a/app/src/main/res/layout/activity_on_boarding_tab.xml
+++ b/app/src/main/res/layout/activity_on_boarding_tab.xml
@@ -5,16 +5,46 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-
-
-        <ImageView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:contentDescription="TODO"
-            android:src="@drawable/welcome_screen_tab">
+            android:layout_height="match_parent">
+            <RelativeLayout
+                android:id="@+id/rl"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
+                app:layout_constraintDimensionRatio="H,9:16"
+                android:background="@drawable/welcome_screen_tab"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"></RelativeLayout>
 
-        </ImageView>
+<!--            <ImageView-->
+<!--                android:id="@+id/imageView"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_marginEnd="0dp"-->
+<!--                android:layout_marginStart="0dp"-->
+<!--                android:layout_marginTop="0dp"-->
+<!--                app:srcCompat="@drawable/welcome_screen_tab"-->
+<!--                app:layout_constraintDimensionRatio="H,9:16"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                />-->
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--        <ImageView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:scaleType="fitXY"-->
+<!--            android:contentDescription="TODO"-->
+<!--            android:src="@drawable/welcome_screen_tab">-->
+
+<!--        </ImageView>-->
         <TextView
             android:id="@+id/skip_login"
             android:layout_width="match_parent"
