--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -86,7 +86,7 @@
                     android:layout_width="@dimen/toolbar_logo_icon_width"
                     android:layout_height="@dimen/toolbar_logo_icon_height"
                     android:layout_toRightOf="@+id/back_layout"
-                    android:background="@drawable/vipalogo180"
+                    android:background="@drawable/toolbar_logo"
                     android:contentDescription="TODO"
                     android:layout_gravity="center"/>
 
