--- a/app/src/main/res/layout/row_episode_list.xml
+++ b/app/src/main/res/layout/row_episode_list.xml
@@ -294,11 +294,10 @@
             android:layout_marginTop="@dimen/rail_top_margin"
             android:fontFamily="@font/sukhumvittadmai_normal"
             android:lineSpacingExtra="2sp"
-            android:paddingLeft="@dimen/NontonSize5"
-            android:paddingRight="@dimen/NontonSize5"
-
+            android:paddingLeft="@dimen/NontonSize7"
+            android:paddingRight="@dimen/NontonSize7"
+            android:textColor="?attr/more_item_text_color"
             android:textSize="@dimen/font_xsmall"
-            android:text="dsdhgfdshfgdsfhsgdsdshdsfshdgfsdhfgssdhgfdshfgdshfgdshfsgdfhsghfgshfgdsgfsdfhdsgfsgfhsgfsgfsgfdgfdsgfdsjsgfsjdfhdsjsjfhsjdfhsjdfgshfgdgfshdfgdshfgdshfgdshfdsgfhsdgf<hfgdhgf<gfgfd"
             android:visibility="visible" />
 
     </LinearLayout>
