thai ui changes

--- a/app/src/main/res/drawable/rounded_button_welcome.xml
+++ b/app/src/main/res/drawable/rounded_button_welcome.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="12dp" />
-            <solid android:color="@color/description_title_yellow" />
+            <solid android:color="#d9d9da" />
 
         </shape>
     </item>
