--- a/app/src/main/res/drawable/rounded_button_gray.xml
+++ b/app/src/main/res/drawable/rounded_button_gray.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="12dp" />
-            <solid android:color="#787a7d" />
+            <solid android:color="#f68a1f" />
 
         </shape>
     </item>
