--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -222,7 +222,7 @@
                                     android:contentDescription="TODO"
                                     android:src="@drawable/input_icon"
                                     android:tint="#FFFFFF"
-                                    />
+                                    android:visibility="gone"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
