--- a/brightcovelibrary/src/main/res/layout/playback_quality.xml
+++ b/brightcovelibrary/src/main/res/layout/playback_quality.xml
@@ -47,6 +47,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
                 android:textColor="@color/white"
+                android:fontFamily="@font/sukhumvittadmai_bold"
                 android:textSize="14dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -57,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:paddingLeft="10dp"
+                android:fontFamily="@font/sukhumvittadmai_medium"
                 android:textSize="11dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/quality_text" />
