--- a/app/src/main/res/layout-sw600dp-land/fragment_more.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_more.xml
@@ -72,16 +72,16 @@
                                     android:layout_width="@dimen/new_more_img_size"
                                     android:layout_height="@dimen/new_more_img_size"
                                     android:gravity="center"
-                                    android:background="@drawable/circular_drawable">
+                                    android:background="@drawable/ic_person_24dp">
 
-                                    <TextView
-                                        android:id="@+id/user_name_words"
-                                        android:layout_width="wrap_content"
-                                        android:textSize="@dimen/new_more_img_txt_size"
-                                        android:text=""
-                                        android:fontFamily="@font/sukhumvittadmai_bold"
-                                        android:textColor="@color/white"
-                                        android:layout_height="wrap_content" />
+<!--                                    <TextView-->
+<!--                                        android:id="@+id/user_name_words"-->
+<!--                                        android:layout_width="wrap_content"-->
+<!--                                        android:textSize="@dimen/new_more_img_txt_size"-->
+<!--                                        android:text=""-->
+<!--                                        android:fontFamily="@font/sukhumvittadmai_bold"-->
+<!--                                        android:textColor="@color/white"-->
+<!--                                        android:layout_height="wrap_content" />-->
 
                                     <de.hdodenhof.circleimageview.CircleImageView
                                         android:id="@+id/ivProfilePic"
