--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -74,16 +74,17 @@
                                         android:layout_width="@dimen/new_more_img_size"
                                         android:layout_height="@dimen/new_more_img_size"
                                         android:gravity="center"
-                                        android:background="@drawable/circular_drawable">
+                                        android:background="@drawable/ic_person_24dp"
+                                        android:orientation="vertical">
 
-                                        <TextView
-                                            android:id="@+id/user_name_words"
-                                            android:layout_width="wrap_content"
-                                            android:textSize="@dimen/new_more_img_txt_size"
-                                            android:text=""
-                                            android:fontFamily="@font/sukhumvittadmai_bold"
-                                            android:textColor="@color/white"
-                                            android:layout_height="wrap_content" />
+<!--                                        <TextView-->
+<!--                                            android:id="@+id/user_name_words"-->
+<!--                                            android:layout_width="wrap_content"-->
+<!--                                            android:textSize="@dimen/new_more_img_txt_size"-->
+<!--                                            android:text=""-->
+<!--                                            android:fontFamily="@font/sukhumvittadmai_bold"-->
+<!--                                            android:textColor="@color/white"-->
+<!--                                            android:layout_height="wrap_content" />-->
 
 
                                     </LinearLayout>
@@ -118,7 +119,7 @@
                                         android:background="@drawable/rounded_button"
                                         android:gravity="center"
                                         android:fontFamily="@font/sukhumvittadmai_normal"
-                                        android:layout_marginTop="@dimen/_5sdp"
+                                        android:layout_marginTop="@dimen/_7sdp"
                                         android:text="@string/login_txt"
                                         android:textAllCaps="false"
                                         android:textColor="@color/white"
