--- a/app/src/main/res/layout-land/fragment_more.xml
+++ b/app/src/main/res/layout-land/fragment_more.xml
@@ -68,21 +68,32 @@
                                 android:gravity="center"
                                 android:orientation="vertical">
 
-                                <LinearLayout
-                                    android:layout_width="@dimen/new_more_img_size"
-                                    android:layout_height="@dimen/new_more_img_size"
-                                    android:gravity="center"
-                                    android:background="@drawable/ic_person_24dp">
+                                 <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:id="@+id/titleLayout"
+                                        android:background="@drawable/white_circle_bg"
+                                        android:orientation="vertical">
+                                    <ImageView
+                                        android:visibility="visible"
+                                        android:layout_width="@dimen/new_more_img_size"
+                                        android:layout_height="@dimen/new_more_img_size"
+                                        android:gravity="center"
+                                        android:background="@drawable/ic_person_24dp"
+                                        />
 
-<!--                                    <TextView-->
-<!--                                        android:id="@+id/user_name_words"-->
-<!--                                        android:layout_width="wrap_content"-->
-<!--                                        android:textSize="@dimen/new_more_img_txt_size"-->
-<!--                                        android:text=""-->
-<!--                                        android:fontFamily="@font/sukhumvittadmai_bold"-->
-<!--                                        android:textColor="@color/white"-->
-<!--                                        android:layout_height="wrap_content" />-->
+<!--                                        <TextView-->
+<!--                                            android:id="@+id/user_name_words"-->
+<!--                                            android:layout_width="wrap_content"-->
+<!--                                            android:textSize="@dimen/new_more_img_txt_size"-->
+<!--                                            android:text=""-->
+<!--                                            android:fontFamily="@font/sukhumvittadmai_bold"-->
+<!--                                            android:textColor="@color/white"-->
+<!--                                            android:layout_height="wrap_content" />-->
 
+
+                                    </LinearLayout>
                                     <de.hdodenhof.circleimageview.CircleImageView
                                         android:id="@+id/ivProfilePic"
                                         android:visibility="gone"
@@ -92,7 +103,6 @@
                                         app:civ_border_color="@color/material_grey_400"
                                         app:civ_border_width="@dimen/NontonSize1" />
 
-                                </LinearLayout>
 
 
 
