--- a/app/src/main/res/layout-sw600dp-land/forgot_password.xml
+++ b/app/src/main/res/layout-sw600dp-land/forgot_password.xml
@@ -100,7 +100,7 @@
                         android:singleLine="true"
                         android:layout_marginTop="@dimen/NontonSize5"
                         android:textColor="?attr/app_edit_text_color"
-                        android:textColorHint="?attr/new_password_text_and_hint_color"
+                        android:textColorHint="@color/lightGreyProfile"
                         android:textSize="@dimen/TextSize14" />
                                </LinearLayout>
 
