--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -102,7 +102,7 @@
                                       android:layout_marginTop="@dimen/NontonSize5"
                         android:singleLine="true"
                         android:textColor="?attr/app_edit_text_color"
-                        android:textColorHint="?attr/app_edit_text_color"
+                        android:textColorHint="@color/lightGreyProfile"
                         android:textSize="@dimen/TextSize14" />
                               </LinearLayout>
 
